syntax = "proto3";

package chat_main;

service CompanyService {
    rpc InitCompanyInfo(InitCompanyInfoRequest) returns (InitCompanyInfoResponse);
}

service TradeService {
    rpc CreateTrade(CreateTradeRequest) returns (CreateTradeResponse);
}

message InitCompanyInfoRequest {
  string companyId = 1;
  string accessKey = 2;
}

message InitCompanyInfoResponse {
  bool success = 1;
}

message CreateTradeRequest {
  string companyId = 1;
  string accessKey = 2;
}

message CreateTradeResponse {
  bool success = 1;
}